// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdownRender node e2e coverage > renders admonition node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="admonition">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-c8910e11="" data-v-8dfe8a80="" class="admonition admonition-stable">
          <!-- Legend-style title that sits on the border -->
          <div data-v-c8910e11="" id="admonition-stable" class="admonition-stable">
            <!-- SVG icons per type --><svg data-v-c8910e11="" xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="admonition-stable">
              <path data-v-c8910e11="" d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"></path>
              <path data-v-c8910e11="" d="M12 9v4"></path>
              <path data-v-c8910e11="" d="M12 17h.01"></path>
            </svg><span data-v-c8910e11="" class="admonition-stable">Warning</span>
            <!--v-if-->
          </div>
          <div data-v-c8910e11="" id="admonition-stable-content" class="admonition-stable" aria-labelledby="admonition-stable">
            <div data-v-8dfe8a80="" data-v-c8910e11="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="admonition-stable-renderer-0-0-0"><span data-v-a84b8095="">Admonition content</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders blockquote node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="blockquote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <blockquote data-v-8ae59609="" data-v-8dfe8a80="" class="blockquote" dir="auto" is-dark="false">
          <div data-v-8dfe8a80="" data-v-8ae59609="" class="markstream-vue markdown-renderer">
            <!--v-if-->
            <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
              <div data-v-8dfe8a80="" class="node-content">
                <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                  <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="blockquote-markdown-renderer-0-0-0"><span data-v-a84b8095="">Blockquote rendered content.</span>
                    <!--v-if--></span>
                  </p>
                </transition-stub>
              </div>
            </div>
            <!--v-if-->
          </div>
        </blockquote>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders checkbox nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-disc" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" role="img" aria-label="checked" index-key="list-item-markdown-renderer-0-0-0-0"><!-- Unchecked --><!-- Checked --><svg data-v-31e4c290="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" class="checkbox-icon checkbox-checked"><rect data-v-31e4c290="" x="3" y="3" width="18" height="18" rx="4" fill="currentColor"></rect><path data-v-31e4c290="" d="M9 12l2 2 4-4" stroke="hsl(var(--ms-background))" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"></path></svg></span>
                      <!----><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-2"><span data-v-a84b8095=""> Completed task</span>
                      <!--v-if--></span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-31e4c290="" data-v-93ee5c2d="" class="checkbox-node" role="img" aria-label="unchecked" index-key="list-item-markdown-renderer-0-1-0-0"><!-- Unchecked --><svg data-v-31e4c290="" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" class="checkbox-icon checkbox-unchecked"><rect data-v-31e4c290="" x="3" y="3" width="18" height="18" rx="4" stroke="currentColor" stroke-width="2"></rect></svg></span>
                      <!----><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-1-0-2"><span data-v-a84b8095=""> Pending task</span>
                      <!--v-if--></span>
                      <!---->
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders code block node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="code_block">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals --><pre data-v-8dfe8a80="" class="language-ts" aria-busy="false" aria-label="Code block: ts" data-language="ts" data-markstream-pre="1" tabindex="0" loading="false" index-key="markdown-renderer-0" stream="true" showtooltips="true" is-dark="false"><code translate="no">export const sum = (a: number, b: number) =&gt; a + b
</code></pre>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders complex inline code with emphasis and multiple code spans 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-decimal" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="1">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><strong data-v-b1e65240="" data-v-93ee5c2d="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-0-0"><span data-v-a84b8095="">整合冗余条款：</span><!--v-if--></span></strong><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-1"><span data-v-a84b8095=""> 将原</span>
                      <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="list-item-markdown-renderer-0-0-0-2"><span data-v-36040df8="">1-(5)</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-3"><span data-v-a84b8095="">、</span>
                      <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="list-item-markdown-renderer-0-0-0-4"><span data-v-36040df8="">3-(3)</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-5"><span data-v-a84b8095="">、</span>
                      <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="list-item-markdown-renderer-0-0-0-6"><span data-v-36040df8="">3-(4)</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-7"><span data-v-a84b8095="">中关于“缴纳费用”和“告知法律状态变化”的核心义务合并，统一放入</span>
                      <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="list-item-markdown-renderer-0-0-0-8"><span data-v-36040df8="">1-(4)</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-9"><span data-v-a84b8095="">“法律状态维护与通知义务”中，使其逻辑更集中，避免了在不同部分重复提及相似义务。</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders definition list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="definition_list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <dl data-v-084c0831="" data-v-8dfe8a80="" class="definition-list" is-dark="false">
          <dt data-v-084c0831="" class="definition-term">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="definition-term-markdown-renderer-0-0-0" typewriter="true" is-dark="false"><span data-v-a84b8095="">Term</span>
                    <!--v-if--></span>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </dt>
          <dd data-v-084c0831="" class="definition-desc">
            <div data-v-8dfe8a80="" data-v-084c0831="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="definition-desc-markdown-renderer-0-0-0-0"><span data-v-a84b8095="">Definition details</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </dd>
        </dl>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emoji node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Smile with </span>
          <!--v-if--></span><span data-v-b001e831="" data-v-93ee5c2d="" class="emoji-node" index-key="markdown-renderer-0-1">😄</span><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> emoji.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders emphasis node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span>
          <!--v-if--></span><em data-v-ca49685e="" data-v-93ee5c2d="" class="emphasis-node"><span data-v-a84b8095="" data-v-ca49685e="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">italic text</span><!--v-if--></span></em><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote nodes 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">A footnote reference</span>
          <!--v-if--></span><sup data-v-ba0412bc="" data-v-93ee5c2d="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0-1"><span data-v-ba0412bc="" href="#footnote-1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="footnote">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-8dfe8a80="" id="fnref--1" class="footnote-node flex text-sm leading-relaxed border-t border-[var(--footnote-border)] pt-2" is-dark="false">
          <!-- <span class="font-semibold mr-2 text-[#0366d6]">[{{ node.id }}]</span> -->
          <div class="flex-1">
            <div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="footnote-markdown-renderer-1-0-0"><span data-v-a84b8095="">Footnote explanation</span>
                      <!--v-if--></span><a data-v-31914872="" data-v-93ee5c2d="" class="footnote-anchor text-sm hover:underline cursor-pointer" href="#fnref-1" title="返回引用 1" index-key="footnote-markdown-renderer-1-0-1"> ↩︎ </a>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders footnote reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="footnote_reference">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><sup data-v-ba0412bc="" data-v-8dfe8a80="" id="fnref-1" class="footnote-reference" index-key="markdown-renderer-0" typewriter="true" is-dark="false"><span data-v-ba0412bc="" href="#footnote-1" title="查看脚注 1" class="footnote-link cursor-pointer">[1]</span></sup></transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders hardbreak node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Line one</span>
          <!--v-if--></span><br data-v-2587360c="" data-v-93ee5c2d="" class="hard-break" index-key="markdown-renderer-0-1"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">Line two</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders heading node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="heading">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <h1 data-v-9f883140="" data-v-8dfe8a80="" class="heading-node heading-1" dir="auto" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-9f883140="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Heading Node Title</span>
          <!--v-if--></span>
        </h1>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders highlight node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Use </span>
          <!--v-if--></span><mark data-v-9bc40b1b="" data-v-93ee5c2d="" class="highlight-node"><span data-v-a84b8095="" data-v-9bc40b1b="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">highlighted text</span>
            <!--v-if--></span>
          </mark><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> for emphasis.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders image links with relative target stay inline 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="https://www.npmjs.com/package/markstream-vue" title="" aria-label="Link: https://www.npmjs.com/package/markstream-vue" aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-4ff2ac62="" data-v-994bfd08="" class="image-node-container" index-key="markdown-renderer-0-0-0"><img data-v-4ff2ac62="" src="https://img.shields.io/npm/v/markstream-vue?color=a1b858&amp;label=" alt="NPM version" title="NPM version" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="NPM version"></span></a> <a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="README.zh-CN.md" title="" aria-label="Link: README.zh-CN.md" aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-4ff2ac62="" data-v-994bfd08="" class="image-node-container" index-key="markdown-renderer-0-2-0"><img data-v-4ff2ac62="" src="https://img.shields.io/badge/docs-%E4%B8%AD%E6%96%87%E6%96%87%E6%A1%A3-blue" alt="中文版" title="中文版" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="中文版"></span></a></p>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders image node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-4ff2ac62="" data-v-93ee5c2d="" class="image-node-container" index-key="markdown-renderer-0-0"><img data-v-4ff2ac62="" src="https://example.com/vue.png" alt="Vue Logo" title="Vue Logo" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="Vue Logo"></span></p>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders inline code node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Here is </span>
          <!--v-if--></span><code data-v-36040df8="" data-v-93ee5c2d="" class="inline-code" index-key="markdown-renderer-0-1"><span data-v-36040df8="">const answer = 42</span><!--v-if--></code><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> inline.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders insert node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Here comes </span>
          <!--v-if--></span><ins data-v-1e673445="" data-v-93ee5c2d="" class="insert-node"><span data-v-a84b8095="" data-v-1e673445="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">inserted text</span>
            <!--v-if--></span>
          </ins><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> in the paragraph.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders link node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Visit </span>
          <!--v-if--></span><a data-v-994bfd08="" data-v-93ee5c2d="" class="link-node" href="https://vuejs.org" title="" aria-label="Link: https://vuejs.org" aria-hidden="false" target="_blank" rel="noopener noreferrer" style="--underline-height: 2px; --underline-bottom: -3px; --underline-opacity: 0.35; --underline-rest-opacity: 0.175; --underline-duration: 1.6s; --underline-timing: ease-in-out; --underline-iteration: infinite;"><span data-v-a84b8095="" data-v-994bfd08="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">Vue</span>
            <!--v-if--></span>
          </a><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> now.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders math inline node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Einstein wrote </span>
          <!--v-if--></span><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1"><span data-v-a84b8095="">$E=mc^2$</span>
          <!--v-if--></span><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders ordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ol data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-decimal" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="1">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-0"><span data-v-a84b8095="">First entry</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto" value="2">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-1-0-0"><span data-v-a84b8095="">Second entry</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ol>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders paragraph and text node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Simple paragraph content rendered as plain text.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders reference node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Cite research </span>
          <!--v-if--></span><span data-v-7c86ecd2="" data-v-93ee5c2d="" class="reference-node cursor-pointer text-xs rounded-md px-1.5 mx-0.5" role="button" tabindex="0" index-key="markdown-renderer-0-1">1</span><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> for details.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders single badge image with trailing newline stays inline 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-4ff2ac62="" data-v-93ee5c2d="" class="image-node-container" index-key="markdown-renderer-0-0"><img data-v-4ff2ac62="" src="https://img.shields.io/npm/l/markstream-vue" alt="License" title="License" class="image-node__img is-loaded" fetchpriority="high" decoding="sync" tabindex="-1" aria-label="License"></span></p>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strikethrough node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span>
          <!--v-if--></span><del data-v-d7c2e36d="" data-v-93ee5c2d="" class="strikethrough-node"><span data-v-a84b8095="" data-v-d7c2e36d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">deleted text</span>
            <!--v-if--></span>
          </del><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders strong node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">This is </span>
          <!--v-if--></span><strong data-v-b1e65240="" data-v-93ee5c2d="" class="strong-node"><span data-v-a84b8095="" data-v-b1e65240="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">bold text</span><!--v-if--></span></strong><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders subscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Chemical formula H</span>
          <!--v-if--></span><sub data-v-40ad1ac6="" data-v-93ee5c2d="" class="subscript-node"><span data-v-a84b8095="" data-v-40ad1ac6="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">2</span>
            <!--v-if--></span>
          </sub><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095="">O is familiar.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders superscript node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">Math uses x</span>
          <!--v-if--></span><sup data-v-9c4a3c09="" data-v-93ee5c2d="" class="superscript-node"><span data-v-a84b8095="" data-v-9c4a3c09="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-1-0"><span data-v-a84b8095="">2</span>
            <!--v-if--></span>
          </sup><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-2"><span data-v-a84b8095=""> frequently.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders table node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="table">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <div data-v-8fb37ab3="" data-v-8dfe8a80="" class="table-node-wrapper" loading="false">
          <table data-v-8fb37ab3="" class="table-node" aria-busy="false">
            <!--v-if-->
            <thead data-v-8fb37ab3="">
              <tr data-v-8fb37ab3="">
                <th data-v-8fb37ab3="" dir="auto" class="text-left">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-th-markdown-renderer-0-0" typewriter="true" is-dark="false"><span data-v-a84b8095="">Name</span>
                          <!--v-if--></span>
                        </transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div><button data-v-8fb37ab3="" type="button" class="table-node__resize-handle" aria-label="Resize columns 1 and 2"></button>
                </th>
                <th data-v-8fb37ab3="" dir="auto" class="text-left">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-th-markdown-renderer-0-0" typewriter="true" is-dark="false"><span data-v-a84b8095="">Role</span>
                          <!--v-if--></span>
                        </transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                  <!--v-if-->
                </th>
              </tr>
            </thead>
            <tbody data-v-8fb37ab3="">
              <tr data-v-8fb37ab3="">
                <td data-v-8fb37ab3="" class="text-left" dir="auto">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-td-markdown-renderer-0-0" typewriter="true" is-dark="false"><span data-v-a84b8095="">Alice</span>
                          <!--v-if--></span>
                        </transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </td>
                <td data-v-8fb37ab3="" class="text-left" dir="auto">
                  <div data-v-8dfe8a80="" data-v-8fb37ab3="" class="markstream-vue markdown-renderer">
                    <!--v-if-->
                    <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="text">
                      <div data-v-8dfe8a80="" class="node-content">
                        <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                        <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true"><span data-v-a84b8095="" data-v-8dfe8a80="" class="whitespace-pre-wrap break-words text-node" index-key="table-td-markdown-renderer-0-0" typewriter="true" is-dark="false"><span data-v-a84b8095="">Developer</span>
                          <!--v-if--></span>
                        </transition-stub>
                      </div>
                    </div>
                    <!--v-if-->
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
          <transition-stub data-v-8fb37ab3="" name="table-node-fade" appear="false" persisted="false" css="true">
            <!--v-if-->
          </transition-stub>
        </div>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders thematic break node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-0-0"><span data-v-a84b8095="">First section.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="1" data-node-type="thematic_break">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <hr data-v-18e4f209="" data-v-8dfe8a80="" class="hr-node" node="[object Object]" index-key="markdown-renderer-1" typewriter="true" is-dark="false">
      </transition-stub>
    </div>
  </div>
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="2" data-node-type="paragraph">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="markdown-renderer-2-0"><span data-v-a84b8095="">Second section.</span>
          <!--v-if--></span>
        </p>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`markdownRender node e2e coverage > renders unordered list node 1`] = `
"<div data-v-8dfe8a80="" class="markstream-vue markdown-renderer">
  <!--v-if-->
  <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="list">
    <div data-v-8dfe8a80="" class="node-content">
      <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
      <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
        <ul data-v-b195669a="" data-v-8dfe8a80="" class="list-node list-disc" is-dark="false">
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-0-0-0"><span data-v-a84b8095="">Item one</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
          <li data-v-d94d2511="" data-v-b195669a="" class="list-item" dir="auto">
            <div data-v-8dfe8a80="" data-v-d94d2511="" class="markstream-vue markdown-renderer">
              <!--v-if-->
              <div data-v-8dfe8a80="" class="node-slot" data-node-index="0" data-node-type="paragraph">
                <div data-v-8dfe8a80="" class="node-content">
                  <!-- Skip wrapping code_block nodes in transitions to avoid touching Monaco editor internals -->
                  <transition-stub data-v-8dfe8a80="" name="typewriter" appear="true" persisted="false" css="true">
                    <p data-v-93ee5c2d="" data-v-8dfe8a80="" dir="auto" class="paragraph-node" typewriter="true" is-dark="false"><span data-v-a84b8095="" data-v-93ee5c2d="" class="whitespace-pre-wrap break-words text-node" index-key="list-item-markdown-renderer-0-1-0-0"><span data-v-a84b8095="">Item two</span>
                      <!--v-if--></span>
                    </p>
                  </transition-stub>
                </div>
              </div>
              <!--v-if-->
            </div>
          </li>
        </ul>
      </transition-stub>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
